[package]
name = "rson"
version = "0.1.0"
authors = ["Mateusz Ryczek <mateusz@northwestern.edu>"]

[dependencies]
serde_derive = "1.0.63"
serde = { version = "1.0.62", features = ["rc"] }
serde_json = "1.0.19"
hyper = "0.11.2"
hyper-tls = "0.1.3"
futures = "0.1"
tokio-core = "0.1"
url = "1.7.0"
pretty_env_logger = "0.2.3"
