[package]
name = "rson"
version = "0.1.0"
authors = ["Hakan Dingenc <hakan@u.northwestern.edu>",
           "Mateusz Ryczek <mateusz@northwestern.edu>"]

[dependencies]
serde = { version = "1.0.62", features = ["rc"] }
serde_json = "1.0.19"
hyper = "0.11.2"
hyper-tls = "0.1.3"
futures = "0.1"
tokio-core = "0.1"
url = "1.7.0"
regex = "1.0.0"
lazy_static = "1.0.0"
mime = "0.3.7"
bus = "2.0.0"
